; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_lro.c_lro_update_flush_stats.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_lro.c_lro_update_flush_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@lro_flushes = common dso_local global i32 0, align 4
@lro_single_flushes = common dso_local global i32 0, align 4
@lro_double_flushes = common dso_local global i32 0, align 4
@lro_good_flushes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mbuf*)* @lro_update_flush_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lro_update_flush_stats(%struct.mbuf* %0) #0 {
  %2 = alloca %struct.mbuf*, align 8
  store %struct.mbuf* %0, %struct.mbuf** %2, align 8
  %3 = load i32, i32* @lro_flushes, align 4
  %4 = add nsw i32 %3, 1
  store i32 %4, i32* @lro_flushes, align 4
  %5 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %6 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %17 [
    i32 0, label %9
    i32 1, label %11
    i32 2, label %14
  ]

9:                                                ; preds = %1
  %10 = call i32 @ASSERT(i32 0)
  br label %11

11:                                               ; preds = %1, %9
  %12 = load i32, i32* @lro_single_flushes, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* @lro_single_flushes, align 4
  br label %20

14:                                               ; preds = %1
  %15 = load i32, i32* @lro_double_flushes, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* @lro_double_flushes, align 4
  br label %20

17:                                               ; preds = %1
  %18 = load i32, i32* @lro_good_flushes, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* @lro_good_flushes, align 4
  br label %20

20:                                               ; preds = %17, %14, %11
  ret void
}

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
